Worked on welcome error menu and keyboard sfx Added a new experimental feature on keyboard sound effects

--- a/App/index.html
+++ b/App/index.html
@@ -27,5 +27,8 @@
     <script src="code/server.js"></script>
     <script src="code/header.js"></script>
     <script src="code/project.js"></script>
+
+    <!-- Features -->
+    <script src="code/keyboardfx/index.js"></script>
 </body>
 </html>
