--- a/App/index.html
+++ b/App/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style/welcome.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/project.css">
+
+    <!-- Test themes -->
+    <!-- <link rel="stylesheet" href="assets/themes/peach.css"> -->
 </head>
 <body>
     <!-- Libraries -->
