Removed storage debug and worked on glassmorphism Changes
Removed fake storage usage that was left from debugging
Made progress but didn't do anything on module glassmorphism

--- a/App/index.html
+++ b/App/index.html
@@ -33,5 +33,6 @@
 
     <!-- Features -->
     <script src="code/keyboardfx/index.js"></script>
+    <script src="code/glassmorphism/index.js"></script>
 </body>
 </html>
