Math question I can't figure out gradients!

--- a/App/index.html
+++ b/App/index.html
@@ -31,6 +31,8 @@
     <script src="code/header.js"></script>
     <script src="code/project.js"></script>
 
+    <!-- <script src="code/mathexample.js"></script> -->
+
     <!-- Features -->
     <script src="code/keyboardfx/index.js"></script>
     <script src="code/glassmorphism/index.js"></script>
