Added a library and speedometer effect Changes Added ua-parser.js to the libraries Added a speedometer effect to the Usage Element

--- a/App/index.html
+++ b/App/index.html
@@ -19,6 +19,7 @@
     <script src="assets/libraries/jsmediatags.min.js"></script>
     <script src="assets/libraries/MDUtils.js"></script>
     <script src="assets/libraries/socket.io.js"></script>
+    <script src="assets/libraries/ua-parser.min.js"></script>
     <!-- WriteNote Code -->
     <script src="assets/locales/en.js"></script>
     <script src="code/settings.js"></script>
