--- a/App/index.html
+++ b/App/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style/welcome.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/project.css">
+    <link rel="stylesheet" href="style/device.css">
+    <link rel="stylesheet" href="style/weather.css">
 
     <!-- Test themes -->
     <!-- <link rel="stylesheet" href="assets/themes/peach.css"> -->
@@ -29,6 +31,8 @@
     <script src="code/welcome.js"></script>
     <script src="code/forensic.js"></script>
     <script src="code/server.js"></script>
+    <script src="code/device.js"></script>
+    <script src="code/weather.js"></script>
     <script src="code/header.js"></script>
     <script src="code/project.js"></script>
 
