--- a/App/index.html
+++ b/App/index.html
@@ -23,7 +23,7 @@
     <script src="assets/libraries/socket.io.js"></script>
     <script src="assets/libraries/ua-parser.min.js"></script>
     <!-- WriteNote Code -->
-    <script src="assets/locales/tr.js"></script>
+    <script src="assets/locales/en.js"></script>
     <script src="code/settings.js"></script>
     <script src="code/writenote.js"></script>
     <script src="code/app.js"></script>
