--- a/App/index.html
+++ b/App/index.html
@@ -22,6 +22,7 @@
     <script src="assets/libraries/MDUtils.js"></script>
     <script src="assets/libraries/socket.io.js"></script>
     <script src="assets/libraries/ua-parser.min.js"></script>
+    <script src="assets/libraries/qrcode.min.js"></script>
     <!-- WriteNote Code -->
     <script src="assets/locales/en.js"></script>
     <script src="code/settings.js"></script>
