Almost finished packager. Astounding! Started working on an easter egg machine! Compresses codes and styles and packages them.

--- a/App/index.html
+++ b/App/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style/project.css">
     <link rel="stylesheet" href="style/device.css">
     <link rel="stylesheet" href="style/weather.css">
+    <link rel="stylesheet" href="style/Astounding.css">
 
     <!-- Test themes -->
     <!-- <link rel="stylesheet" href="assets/themes/peach.css"> -->
@@ -43,5 +44,8 @@
     <!-- Features -->
     <script src="code/keyboardfx/index.js"></script>
     <script src="code/glassmorphism/index.js"></script>
+
+    <!-- Extras -->
+    <script src="code/Astounding.js"></script>
 </body>
 </html>
