Most changes in a commit
Added a demo presentation workplace

--- a/App/index.html
+++ b/App/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style/project.css">
     <link rel="stylesheet" href="style/device.css">
     <link rel="stylesheet" href="style/weather.css">
+    <link rel="stylesheet" href="style/profile.css">
+    <link rel="stylesheet" href="style/server.css">
+    <link rel="stylesheet" href="style/presentationRemote.css">
     <link rel="stylesheet" href="style/Astounding.css">
 
     <!-- Test themes -->
@@ -27,10 +30,12 @@
     <script src="assets/libraries/cookies.js"></script>
     <!-- WriteNote Code -->
     <script src="assets/locales/en.js"></script>
+    <!-- <script src="assets/locales/bg.js"></script> -->
     <script src="code/settings.js"></script>
     <script src="code/writenote.js"></script>
     <script src="code/app.js"></script>
     <script src="code/loading.js"></script>
+    <script src="code/profile.js"></script>
     <script src="code/welcome.js"></script>
     <script src="code/forensic.js"></script>
     <script src="code/device.js"></script>
@@ -38,6 +43,7 @@
     <script src="code/weather.js"></script>
     <script src="code/header.js"></script>
     <script src="code/project.js"></script>
+    <script src="code/presentationRemote.js"></script>
 
     <!-- <script src="code/mathexample.js"></script> -->
 
